Collin Palmer 2/26/20 Fixed some where spacing above Site elevation text box not its is uniform with other textboxes

--- a/src/main/resources/static/css/new-site-form.css
+++ b/src/main/resources/static/css/new-site-form.css
@@ -17,6 +17,8 @@ div#search input {
 
 #siteLatitude {
   margin-bottom: 5px; }
+#siteLongitude {
+  margin-bottom: 5px; }
 
 div#results {
   color: black;
